unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/GBLite__GridBuddy_Usage_Analytics__c.object-meta.xml
<CustomObject>
    <label>GridBuddy Usage Analytics</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GridBuddy Usage Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GridBuddy Usage Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>