unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__Field_Count__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Field_Count__c</fullName>
    <label>Fields Edited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>