unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Field_Labels__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>