unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__Grid__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grid</label>
    <referenceTo>GBLite__GridBuddySettings__c</referenceTo>
    <relationshipLabel>GridBuddy Usage Analytics (Grid)</relationshipLabel>
    <relationshipName>GridBuddy_Usage_Analytics1</relationshipName>
    <type>Lookup</type>
</CustomField>