unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__Grid_Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grid Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>