unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__Session__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Session__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>