unpackaged/main/default/objects/GBLite__GridBuddy_Usage_Analytics__c/fields/GBLite__User__c.field-meta.xml
<CustomField>
    <fullName>GBLite__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GridBuddy_Usage_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>